# flowmix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  flowmix_audio.py  flowmix_cues.py  flowmix_plan.py  flowmix_profiles.py  flowmix_rendering.py  flowmix_reports.py  flowmix_scoring.py  flowmix_setlist.py  flowmix_two_tracks.py  pyproject.toml  requirements-demucs.txt  requirements-test.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: tests.yml
configs/: cinematic.toml  edm.toml  heart.toml  jazz.toml  lounge.toml  vocal_trance.toml  vocal_trance_strict.toml
examples/: example_report_excerpt.json  generate_fixtures.py  run_move_to_between.sh  run_setlist.sh  setlist_example.json
examples/fixtures/: README.md
tests/: audio_helpers.py  conftest.py  test_audio_fixtures.py  test_cue_golden.py  test_cues.py  test_examples.py  test_mp3_support.py  test_profiles.py  test_refactor_quality.py  test_review_fixes.py  test_setlist.py  test_setlist_build.py  test_smooth_mode.py  test_two_tracks_core.py  test_wav_validation.py
