[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowmix"
version = "1.0.0"
description = "Profile-driven continuous music mix engine for WAV setlists and two-track transitions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sherwin Lu" }]
keywords = ["audio", "wav", "automix", "dj", "transition", "music", "setlist", "crossfade"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "pydub>=0.25.1",
  "numpy>=1.24",
  "librosa>=0.10",
  "soundfile>=0.12",
  "scipy>=1.10",
  "pyloudnorm>=0.1.1",
  'audioop-lts; python_version >= "3.13"',
]

[project.optional-dependencies]
demucs = [
  "torch",
  "torchaudio",
  "demucs",
  'torchcodec; python_version >= "3.14"',
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "basedpyright>=1.28",
]

[tool.basedpyright]
pythonVersion = "3.11"
include = ["flowmix_*.py"]
exclude = ["tests/", "examples/"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[project.urls]
Homepage = "https://github.com/sherwinlu/flowmix"
Repository = "https://github.com/sherwinlu/flowmix"
Issues = "https://github.com/sherwinlu/flowmix/issues"

[project.scripts]
flowmix-two-tracks = "flowmix_two_tracks:main"
flowmix-setlist = "flowmix_setlist:main"
flowmix-cues = "flowmix_cues:main"

[tool.setuptools]
py-modules = [
  "flowmix_two_tracks",
  "flowmix_setlist",
  "flowmix_profiles",
  "flowmix_audio",
  "flowmix_scoring",
  "flowmix_rendering",
  "flowmix_reports",
  "flowmix_plan",
  "flowmix_cues",
]

[tool.setuptools.data-files]
"share/flowmix/configs" = [
  "configs/edm.toml",
  "configs/vocal_trance.toml",
  "configs/vocal_trance_strict.toml",
  "configs/lounge.toml",
  "configs/jazz.toml",
  "configs/heart.toml",
  "configs/cinematic.toml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=flowmix_audio --cov=flowmix_scoring --cov=flowmix_rendering --cov=flowmix_reports --cov=flowmix_plan --cov=flowmix_profiles --cov-report=term-missing:skip-covered --cov-fail-under=70"
